tests/passing/file_name.db
======= add.db =======
function add(a, b) => {
   return a + b!
}