tests/failing/dbx.db
funct App() => {
   return <div>Hello world!</div>
}